style.css
* {
    box-sizing: border-box;
}

:root {
    font-family: monospace;
    color: #fbf1c7;

    --surface-1: #202020;
    --surface-2: #282828;
    --surface-3: #303030;
    --surface-4: #535353;
    --surface-inv: #bababa;

    --text: #fbf1c7;
    --text-inv: #151515;
    --text-hl: #ecbe80;
    --text-visited: #c6613f;
    --text-grayed: #bbbbbb;

    --blue: #56638a;
    --red: #9c4644;
    --green: #58896f;
}

.fg_blue {
    color: var(--blue);
}

.fg_red {
    color: var(--red);
}

.fg_green {
    color: var(--green);
}

.hl {
    color: var(--text-hl);
}

body {
    background-color: var(--surface-1);
    background-image:
        linear-gradient(
            180deg,
            color-mix(in srgb, var(--surface-1) 0%, transparent) 0%,
            var(--surface-1) 200vh
        ),
        radial-gradient(var(--surface-2) 2px, var(--surface-1) 2px);
    background-size:
        100% 100%,
        20px 20px;

    font-size: 1.2rem;

    padding: 0;
    margin: 0;

    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

body::before {
    content: "";
    position: fixed;
    width: 800px;
    height: 800px;
    background: radial-gradient(
        circle 400px,
        color-mix(in srgb, var(--text-hl), transparent 95%) 0%,
        transparent 100%
    );
    pointer-events: none;
    z-index: 3;
    opacity: 0;
    transform: translate(-50%, -50%);
    left: var(--mouse-x, 50%);
    top: var(--mouse-y, 50%);
    transition:
        opacity 0.3s ease,
        left 0.15s ease,
        top 0.15s ease;
}
body:hover::before {
    opacity: 1;
}
body:has(.commit:hover)::before {
    opacity: 0;
}

#HEAD {
    height: max(90vh, 400px);
    width: clamp(300px, 90%, 80rem);
    padding-left: 1rem;
}

#HEAD h1 {
    font-size: 4rem;
    margin: 1rem 0;
}

#HEAD p {
    color: var(--text-hl);
    font-size: 1.5rem;
}

.center-left {
    display: flex;
    align-items: start;
    justify-content: center;
    flex-direction: column;
}

.repo {
    width: clamp(300px, 90%, 80rem);
    font-size: 2rem;
    padding: 1rem 0;

    border-bottom: solid 1px var(--surface-3);
}

.commit {
    background-color: var(--surface-2);
    border: 1px solid color-mix(in srgb, var(--surface-2), white 25%);
    margin: 1.5rem 0;
    padding: 2rem;
    border-radius: 10px;
    width: clamp(300px, 90%, 80rem);
    z-index: 5;
}

.commit h2 {
    font-size: 2rem;
    margin: 1.2rem 0 2rem 1rem;
}

.commit a {
    color: var(--text-hl);
    text-decoration: none;
}

.commit a:hover,
.commit a:focus {
    text-decoration: underline;
}

.commit a:active {
    color: var(--text);
}

.commit a:visited {
    color: var(--text-visited);
}

.commit p {
    font-size: 1.2rem;
    margin: 0 0 1rem 1rem;
}

.commit .tags {
    margin: 0 0 1rem 1rem;
    display: flex;
    flex-direction: row;
    justify-content: start;
    align-items: center;
    gap: 0.7rem;

    flex-wrap: wrap;
}

.commit .tag {
    display: inline-block;
    font-weight: bold;
    background-color: var(--surface-3);
    min-width: 5rem;
    min-height: 3rem;
    border: 1px solid color-mix(in srgb, var(--surface-2), white 25%);
    border-radius: 7px;
    padding: 0 1rem;

    display: flex;
    justify-content: center;
    align-items: center;
}

